# CrossyRoady

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  3  CMakeLists.txt  CrossyRoady.sln  Plan.excalidraw  README.md  Screen Guide.excalidraw  pptScript.md  reportScript.md  screens.gaphor
ConsoleEngine/: .clang-format  AniSprite.cpp  AniSprite.h  Audio.cpp  Audio.h  CMakeLists.txt  Canvas.cpp  Canvas.h  Common.cpp  Common.h  ConsoleEngine.vcxproj  ConsoleEngine.vcxproj.filters  Defer.h  Font.cpp  Font.h  Game.cpp  Game.h  LocalStorage.cpp  LocalStorage.h  Logger.cpp  Logger.h  Navigation.cpp  Navigation.h  Palette.cpp  Palette.h  Signal.cpp  Signal.h  SocketWrapper.cpp  SocketWrapper.h  Sprite.cpp  Sprite.h  common.cpp  common.h
ConsoleEngine/Abstract/: AbstractCanvas.h  AbstractGame.h  AbstractNavigation.h  AbstractScreen.h
ConsoleEngine/include/: ConsoleGame.h
CrossyRoady/: .clang-format  About.h  AniScreen.cpp  AniScreen.h  ArrowButton.cpp  ArrowButton.h  AskSave.cpp  AskSave.h  Block.h  Button.cpp  Button.h  CharaSelectScreen.cpp  CharaSelectScreen.h  CharaUnlock.cpp  CharaUnlock.h  Charac.cpp  Charac.h  Character.cpp  Character.h  CharactersInfo.cpp  CharactersInfo.h  Common.cpp  Common.h  Control.cpp  Control.h  Credit.cpp  Credit.h  CrossyRoady.cpp  CrossyRoady.vcxproj  CrossyRoady.vcxproj.filters  DevScreen.cpp  DevScreen.h  Entity.cpp  Entity.h  EntityAni.cpp  EntityAni.h  EntityStatic.cpp  EntityStatic.h  Exp.cpp  Exp.h  (+78 more)
DrawTool/: DrawTool.cpp  DrawTool.vcxproj  DrawTool.vcxproj.filters  out.sprite
NetTest/: NetTest.cpp  NetTest.vcxproj  (+1 more)
(+378 files in other folders)
